--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -1292,7 +1292,7 @@
  NO_COMMUNICATIONS_STATION_DESC:0 "The function of this alien space station is unknown..."
  NO_COMMUNICATIONS_LEADER:0 "ผู้นำเอเลี่ยน"
  NO_COMMUNICATIONS_AMOEBA:0 "ยานเอเลี่ยน"
- CANNOT_INSPECT_BEFORE_CONTACT:0 "§ROur scanners can make no sense of the strange vessel!§!"
+ CANNOT_INSPECT_BEFORE_CONTACT:0 "§Rเครื่องสแกนของเราไม่สามารถตรวจสอบยานแปลกๆนี้ได้!§!"
  NO_COMMUNICATIONS_VESSEL_DESC:0 "ยานเอเลี่ยนลำนี้ไม่ทราบความสามารถ..."
  NO_COMMUNICATIONS_FLEET_DESC:1 "เราจำเป็นต้องเริ่มกระบวนการติดต่อครั้งแรกเพื่อเรียนรู้เพิ่มเติมเกี่ยวกับ $NAME|Y$"
  ABANDONED_STATION_DESC:0 "This station is abandoned."
@@ -12182,7 +12182,7 @@
  ASSIGN_REPRESENTATIVE_DELAYED: "§EAssign a Representative to $FEDERATION$ to increase its §!§HCohesion§!"
  FEDERATION_ASSIGNED_LEADERS: "ผู้แทนถูกแต่งตั้งในสหพันธ์: $VALUE|2+=$"
  FEDERATION_COUNTRY_REPRESENTATIVE: "	$COUNTRY$: $EFFECT|Y0$"
- MOD_VERSION:0 "Mod v0.72.1, Update 14/03/2024"
+ MOD_VERSION:0 "Mod v0.72.2, Update 31/03/2024"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - n/a \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
