--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -2028,61 +2028,61 @@
  tech_orbital_trash_dispersal_desc:0 "This orbital bombardment management system spams a planet with millions of minute, high-velocity projectiles, overwhelming planetside defensive grids with trash data. Ships equipped with this component will cause more damage during orbital bombardment."
  tech_nanite_transmutation:0 "การเปลี่ยนสภาพนาไนต์"
  tech_nanite_transmutation_desc:2 "The mass-production of these rare resources require particularly capable nanites."
- d_arid_highlands:0 "Arid Highlands"
+ d_arid_highlands:0 "ที่ราบสูงแห้งแล้ง"
  d_arid_highlands_desc:1 "An elevated, dry ecoregion bearing sparse vegetation of desert grasses and scrubs."
- d_hot_springs:0 "Hot Springs"
+ d_hot_springs:0 "น้ำพุร้อน"
  d_hot_springs_desc:1 "Groundwater heated by geothermal processes steams from the surface of these springs."
- d_searing_desert:0 "Searing Desert"
+ d_searing_desert:0 "ทะเลทรายร้อนจัด"
  d_searing_desert_desc:1 "With little precipitation, extreme temperatures and limited vegetation, these sandy deserts are hostile to most forms of life."
- d_geothermal_vent:0 "Geothermal Vents"
+ d_geothermal_vent:0 "ช่องระบายความร้อนใต้พิภพ"
  d_geothermal_vent_desc:1 "These fumaroles vent steam and noxious gases from deep within the planet's crust."
- d_underwater_vent:0 "Underwater Vents"
+ d_underwater_vent:0 "ช่องระบายความร้อนใต้น้ำ"
  d_underwater_vent_desc:1 "Metalliferous sediments react with superheated water in the planet's crust, venting chemicals along the seabed where tectonic plates diverge."
- d_rushing_waterfalls:0 "Rushing Waterfalls"
+ d_rushing_waterfalls:0 "น้ำตกที่ไหลเชี่ยว"
  d_rushing_waterfalls_desc:1 "Picturesque vistas formed when rivers flow over the cliff-sides of steep mountainsides."
- d_frozen_gas_lake:0 "Frozen Gas Lake"
+ d_frozen_gas_lake:0 "ทะเลสาบแก๊สแช่แข็ง"
  d_frozen_gas_lake_desc:1 "Formed under immense pressure in a bygone age, deep-freeze temperatures have kept the gases dissolved in these rimy lakes in a solid state."
- d_bubbling_swamp:0 "Bubbling Swamp"
+ d_bubbling_swamp:0 "หนองน้ำเดือด"
  d_bubbling_swamp_desc:1 "A hotbed of aquatic plants, insects, and swamp gas, this wetland is characterized by slow-moving water and rich vegetation."
- d_fuming_bog:0 "Fuming Bog"
+ d_fuming_bog:0 "บึงควัน"
  d_fuming_bog_desc:1 "A noxious quagmire covered in low vegetation, mosses and fungi, where gases steam from the water's surface."
- d_tempestous_mountain:0 "Tempestuous Mountain"
+ d_tempestous_mountain:0 "ผาสูงมีพายุแรง"
  d_tempestous_mountain_desc:1 "Wind-torn vegetation clings to the high crags and stormy cliffs of these rainy mountains."
- d_dust_desert:0 "Dust Desert"
+ d_dust_desert:0 "ทะเลทรายฝุ่นแร่ระเหย"
  d_dust_desert_desc:0 "A vast expanse of sand that covers scattered pockets of rare and valuable Volatile Motes. Extraction is possible with the right equipment."
- d_dust_caverns:0 "Dust Caverns"
+ d_dust_caverns:0 "ถ้ำฝุ่นแร่ระเหย"
  d_dust_caverns_desc:1 "Rare Volatile Motes condense in these sandy caves and hidden hollows."
  d_numas_breath:0 "Numa's Breath"
  d_numas_breath_desc:0 "This stable vent reaching into the planet's crust was created by $NAME_Caravaneer_Fleet2$."
- d_nanosands:0 "Nanosands"
+ d_nanosands:0 "ทรายนาโน"
  d_nanosands_desc:0 "The sand dunes on this planet are almost entirely composed of countless broken nanites. Their structure is degraded far beyond any chance for reactivation, but they do coat the planet in rare metal granulate."
- d_crystal_forest:0 "Crystal Forest"
+ d_crystal_forest:0 "ป่าคริสตัล"
  d_crystal_forest_desc:1 "Glittering crystals grow like hoarfrost in these exotic forests."
- d_veiny_cliffs:0 "Ore-Veined Cliffs"
+ d_veiny_cliffs:0 "หน้าผาสายแร่"
  d_veiny_cliffs_desc:1 "Bands of valuable mineral ores run like veins through these exposed cliff faces."
- d_ore_rich_caverns:0 "Ore-Rich Caverns"
+ d_ore_rich_caverns:0 "ถ้ำแร่ราคาแพง"
  d_ore_rich_caverns_desc:1 "These deep caverns are rife with metallic and mineral ore deposits."
- d_mineral_fields:0 "Mineral Fields"
+ d_mineral_fields:0 "ทุ่งแร่"
  d_mineral_fields_desc:1 "Geological upheaval exposed these useful minerals to the planet's surface long ago."
- d_rich_mountain:0 "Rich Mountain"
+ d_rich_mountain:0 "ภูเขาที่มีทรัพยากรแร่มีค่า"
  d_rich_mountain_desc:1 "These mountainsides glint with rich ore resources and precious stones."
  d_crystal_reef:0 "ปะการังคริสตัล"
  d_crystal_reef_desc:1 "Crystal lattices glimmer amongst the rocks and corals of this sandy reef."
  d_prosperous_mesa:0 "Prosperous Mesa"
  d_prosperous_mesa_desc:1 "This flat-topped hill has steep sides lined with useful resources."
- d_crystalline_caverns:0 "Crystalline Caverns"
+ d_crystalline_caverns:0 "ถ้ำคริสตัลลีน"
  d_crystalline_caverns_desc:1 "Like enormous geodes, these caves are filled on all sides with rare crystals."
- d_submerged_ore_veins:0 "Submerged Ore Veins"
+ d_submerged_ore_veins:0 "สายแร่ที่อยู่ใต้น้ำ"
  d_submerged_ore_veins_desc:2 "Useful ore deposits line parts of the ocean floor, providing opportunities for deep-sea mining."
- d_bountiful_plains:0 "Bountiful Plains"
+ d_bountiful_plains:0 "ที่ราบอุดมสมบูรณ์"
  d_bountiful_plains_desc:1 "Fertile soils and tall grasses cover these sweeping plains, providing rich potential for farmlands."
  d_nutritious_mudland:0 "Nutritious Mudlands"
  d_nutritious_mudland_desc:1 "A watery slurry of clay, silt, and loam stretches across the horizon, where low vegetation flourishes."
- d_green_hills:0 "Green Hills"
+ d_green_hills:0 "เนินเขาที่เขียวขจี"
  d_green_hills_desc:1 "Rolling hills covered in greenery and fertile soils."
- d_forgiving_tundra:1 "Fair Tundra"
+ d_forgiving_tundra:1 "ทุ่งทุนดรา"
  d_forgiving_tundra_desc:1 "Sedges, shrubs and lichens cover this high-latitude biome, where the subsoil permafrost is nevertheless covered in more fertile sediment."
- d_rugged_woods:0 "Rugged Woods"
+ d_rugged_woods:0 "ป่าหินที่หนาวเย็น"
  d_rugged_woods_desc:1 "Cold, rocky woods with herbaceous understories."
  d_boggy_fens:0 "Boggy Fens"
  d_boggy_fens_desc:1 "These low-lying wetlands provide a wealth of plant nutrients."
@@ -2102,15 +2102,15 @@
  d_great_river_desc:1 "A slow-flowing river of enormous volume provides water and vegetation for a rich abundance of life."
  d_black_soil:0 "Black Soil"
  d_black_soil_desc:1 "With a remarkably high moisture capacity and high amounts of chemicals integral to plant life, these soils promise impressive agricultural yields."
- d_teeming_reef:0 "Teeming Reef"
+ d_teeming_reef:0 "เต็มไปด้วยแนวปะการัง"
  d_teeming_reef_desc:1 "A vibrant ecosystem brimming with corals, fish, mollusks, mammals, invertebrates, and all kinds of edible marine life."
- d_tropical_island:0 "Tropical Island"
+ d_tropical_island:0 "เกาะเขตร้อน"
  d_tropical_island_desc:1 "From fruit-laden trees to plentiful fauna, the bounties of this paradisaical island promise a rich harvest."
  d_metal_boneyard:0 "Metal Boneyards"
  d_metal_boneyard_desc:1 "The hollowed-out metal skeletons of fallen infrastructure seem almost to groan as the wind whistles through them."
  d_organic_landfill:0 "Organic Landfills"
  d_organic_landfill_desc:1 "Toxic biohazard waste rots and fumes in vast heaps under the sun."
- d_betharian_deposit:0 "Betharian Fields"
+ d_betharian_deposit:0 "ทุ่งบีธาเรียน"
  d_betharian_deposit_desc:1 "Thousands upon thousands of valuable Betharian stones glint like stars in these fields."
  d_alien_pets_deposit:0 "หุบเขาที่เป็นเอกเทศ"
  d_alien_pets_deposit_desc:1 "This pristine valley lies sheltered amongst the surrounding mountains, its fauna shielded from roving predators."
@@ -2198,7 +2198,7 @@
  d_harvester_fields_desc:0 "Vast fields of dense, edible vegetation where ancient solar-powered harvesters assist in gathering crops."
  d_wetware_computer:0 "Wetware Computer"
  d_wetware_computer_desc:0 "The oceans on this world are almost completely covered in a fine network of algae that appear to be a primitive wetware computer."
- d_savage_wildlands:0 "Savage Wildlands"
+ d_savage_wildlands:0 "ถิ่นทุรกันดารโหดร้ายป่าเถื่อน"
  d_savage_wildlands_desc:0 "The indigenous creatures who inhabit this region appear to operate as a single organism."
  d_worm_mine:0 "$building_worm_mine$"
  d_worm_mine_desc:0 "$building_worm_mine_desc$"
@@ -2639,10 +2639,10 @@
  leaders:0 "ผู้นำ"
  leader_generals:0 "พลเอก"
  leader_admirals:0 "พลเรือเอก"
- leader_commanders: "Commanders"
+ leader_commanders: "ผู้บัญชาการ"
  leader_scientists:0 "นักวิทยาศาสตร์"
  leader_governors:0 "ผู้ว่าการ"
- leader_officials: "Officials"
+ leader_officials: "เจ้าหน้าที่"
  subject_integration:0 "การให้บริวารเข้ามารวมกับเรา"
  pc_city:0 "ดาวอภิมหานคร"
  pc_city_desc:0 "World completely engulfed by urban-industrial sprawl. Its natural lithosphere is no longer discernible from orbit."
