--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -1361,7 +1361,7 @@
  abundant_geothermal_activity_desc: "This planet has many accessible geothermal hot spots. While this poses some engineering challenges, it also provides extra energy generation opportunities."
  subterranean_wildlife: "สัตว์ป่าใต้ดิน"
  subterranean_wildlife_desc: "This planet has a thriving underground lithotrophic ecosystem. Herds of mild mineral-crunching subterranean creatures dig out large caverns, leaving them available for mining and colony use. The animals provide unique research opportunities for the miners who direct the packs to valuable mineral deposits."
- rich_mircoflora: "Rich Microflora"
+ rich_mircoflora: "จุลินทรีย์มาก"
  rich_mircoflora_desc: "The soil of this world is home to a robust and highly productive microflora ecosystem, allowing for rich farming and research opportunities."
  strong_magnetic_field:0 "สนามแม่เหล็กรุนแรง"
  strong_magnetic_field_desc:2 "This planet has an abnormally high magnetic field and will interfere with many of our instruments and computers. Mitigating these effects will help inform field manipulation research."
@@ -1379,7 +1379,7 @@
  titanic_life_desc:0 "The lifeforms of this planet are built on a massive scale and can be incredibly dangerous even without meaning any harm."
  eat_the_titans:0 "ไททันแสนอร่อย"
  eat_the_titans_desc:0 "Harvesting the Titanic life for research data has had an unexpected side benefit: They taste great!"
- asteroid_belt:0 "Asteroid Belt"
+ asteroid_belt:0 "แถบดาวเคราะห์น้อย"
  asteroid_belt_desc:1 "This planet has a belt of minor asteroids orbiting around it. Most likely caused by a tiny moon destroyed in a collision with another planetary body, the debris field provides ample but engineeringly complex mining opportunities."
  natural_beauty:0 "ความงามของธรรมชาติ"
  natural_beauty_desc:0 "The scenery on this planet is simply beautiful, anyone living on this planet will be constantly finding new wonders to behold."
