--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -465,7 +465,7 @@
  holding_orbital_assembly_complex:0 "Orbital Assembly Complex"
  holding_orbital_assembly_complex_desc:1 "A soaring building filled with long assembly lines, creating everything one could dream of."
  holding_orbital_assembly_complex_effect:1 "Increases the effects of modules on the planet's §YOrbital Ring§!."
- holding_propaganda_office:0 "Ministry of Truth"
+ holding_propaganda_office:0 "กระทรวงแห่งความจริง"
  holding_propaganda_office_desc:1 "A ministry overseeing local faiths, news, and political interest groups. With the right prod everything runs a tad smoother."
  holding_satellite_campus:0 "Satellite Campus"
  holding_satellite_campus_desc:1 "A large campus where domestic researchers and foreign scientists can come together to share ideas and conduct experiments."
@@ -473,11 +473,11 @@
  holding_emporium_desc:1 "Large shopping malls filled with futuristic and exotic wares from distant planets."
  holding_aid_agency:0 "Aid Agency"
  holding_aid_agency_desc:1 "Agencies founded and staffed by foreign benefactors, bringing some of their culture and knowledge to the planet."
- holding_energy_requisitorium:0 "Ministry of Energy"
+ holding_energy_requisitorium:0 "กระทรวงแห่งพลังงาน"
  holding_energy_requisitorium_desc:1 "A ministry overseeing taxation and the minting of energy credits, often coming into conflict with the domestic bureaucracy."
- holding_material_requisitorium:1 "Ministry of Extraction"
+ holding_material_requisitorium:1 "กระทรวงแห่งการสกัด"
  holding_material_requisitorium_desc:1 "A ministry overseeing local mineral production, extraction, and purification. They often secure the best land purchases and reap the benefits for their patron."
- holding_produce_requisitorium:2 "Ministry of Acquisition"
+ holding_produce_requisitorium:2 "กระทรวงแห่งการถือสิทธิ์"
  holding_produce_requisitorium_desc:1 "A ministry overseeing local produce. In addition to placing a small tax on this world, some products have a tendency to disappear into their convoluted, bureaucratic process."
  job_energy_requisitioned_effect_desc:2 "£job_technician£ [Root.EnergyProducer] ผลิต §R-3§! $r_energy$ สำหรับบริวาร และ §G4§! $r_energy$ สำหรับเจ้าเหนือหัว"
  job_minerals_requisitioned_effect_desc:2 "£job_miner£ [Root.MineralsProducer] ผลิต §R-2§! $r_minerals$ สำหรับบริวาร และ §G3§! $r_minerals$ สำหรับเจ้าเหนือหัว"
@@ -496,7 +496,7 @@
  holding_offworld_foundry_desc:0 "Large foundries owned by a foreign empire, siphoning off local resources for the creation of high quality alloys."
  holding_overlord_vigil_command:0 "Vigil Command"
  holding_overlord_vigil_command_desc:0 "A command center specialized in - and delegated to - calculating the best possible means of increasing defensive measures."
- holding_parasitic_algorithms:0 "Ministry of Science"
+ holding_parasitic_algorithms:0 "กระทรวงแห่งการวิทยาศาสตร์"
  holding_parasitic_algorithms_desc:0 "A ministry overseeing local research and science, bringing the most noteworthy breakthroughs and discoveries back to their benefactor."
  holding_parasitic_algorithms_effect_desc:2 "[Root.ResearchProducerIcon] [Root.ResearchProducer] เปลี่ยน [Root.SubjectResearcherUpkeep] ของบริวารเป็น $r_research$ สำหรับเจ้าเหนือหัว"
  holding_noble_vacation_homes:0 "ปราสาทคนชั้นสูง"
@@ -823,7 +823,7 @@
  job_overlord_manager_desc:0 "Middle managers that optimize the behavior of the local white-collar workers to synergize with the Overlord's long-term corporate trajectory."
  job_overlord_manager_effect_desc:0 "£job_manager£ $job_overlord_manager_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! เป็น £unity£ §Yเอกภาพ§! และ £mod_trade_value_add£ §Y$TRADE_VALUE$§! สำหรับบริวาร และ £unity£ §Yเอกภาพ§! สำหรับเจ้าเหนือหัว"
  planet_holdings:0 "การถือครอง"
- planet_overlord_propagandists:0 "Overlord Propagandists"
+ planet_overlord_propagandists:0 "นักโฆษณาชวนเชื่อ (โอเวอร์ลอร์ด)"
  planet_overlord_academics:0 "Overlord Academics"
  planet_overlord_traders:0 "Overlord Traders"
  planet_aid_workers:0 "เจ้าหน้าที่ช่วยเหลือ"
