--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -79,7 +79,7 @@
  xenophobe_scientist: ""To prosper, we must keep pace with the outsiders.""
  xenophobe_general: ""I will give our enemies no quarter, their leaders no mercy.""
  xenophobe_official: ""Our planets must remain pure and productive.""
- MOD_CREATE_DEBRIS_CHANCE:0 "Chance to Spawn Debris"
+ MOD_CREATE_DEBRIS_CHANCE:0 "โอกาสเกิดเศษซากยาน"
  exp_gain:0 "ได้รับค่าประสบการณ์"
  mod_admiral_exp_gain:1 "$commander_with_icon$ $exp_gain$"
  mod_general_exp_gain:1 "$general_with_icon$ $exp_gain$"
@@ -1032,11 +1032,11 @@
  leader_trait_shipbreaker_2:0 "$leader_trait_shipbreaker$ II"
  leader_trait_shipbreaker_2_effect:2 "$FLEET_EFFECTS_TXT$:\n$t$ทุกๆครั้งที่ยานศัตรูถูกทำลาย:\n$tt$$r_alloys$: §G+$@trait_shipbreaker_2_amt$§!"
  leader_trait_shipbreaker_2_desc:0 "$leader_trait_shipbreaker_desc$"
- leader_trait_juryrigger:1 "Jury-Rigger"
- leader_trait_juryrigger_effect:2 "$t$ทุกๆครั้งที่ยานจักรวรรดิศัตรูถูกทำลาย:\n$tt$สุ่มยานใน £military_ship£ §Yกองยาน§!: §G$@trait_juryrigger_amt|%0$§! £ship_stats_hitpoints£ ฟื้น HP"
+ leader_trait_juryrigger:1 "ซ่อมด้วยวัสดุใดๆก็ตามที่มี"
+ leader_trait_juryrigger_effect:2 "$t$ทุกๆครั้งที่ยานจักรวรรดิศัตรูถูกทำลาย:\n$tt$สุ่มยานใน £military_ship£ §Yกองยาน§!: £ship_stats_hitpoints£ ฟื้น HP §G$@trait_juryrigger_amt|%0$§!"
  leader_trait_juryrigger_desc:0 "This leader knows how to use debris to patch up a fleet before another engagement."
  leader_trait_juryrigger_2:0 "$leader_trait_juryrigger$ II"
- leader_trait_juryrigger_2_effect:2 "$t$ทุกๆครั้งที่ยานจักรวรรดิศัตรูถูกทำลาย:\n$tt$สุ่มยานใน £military_ship£ §Yกองยาน§!: §G$@trait_juryrigger_2_amt|%0$§! £ship_stats_hitpoints£ ฟื้น HP"
+ leader_trait_juryrigger_2_effect:2 "$t$ทุกๆครั้งที่ยานจักรวรรดิศัตรูถูกทำลาย:\n$tt$สุ่มยานใน £military_ship£ §Yกองยาน§!: £ship_stats_hitpoints£ ฟื้น HP §G$@trait_juryrigger_2_amt|%0$§!"
  leader_trait_juryrigger_2_desc:0 "$leader_trait_juryrigger_desc$"
  leader_trait_commanding_presence:0 "อยู่ในที่ที่สามารถบังคับบัญชาได้"
  leader_trait_commanding_presence_desc:1 "This leader holds a special place in the navy, attracting the most skilled captains and logisticians."
@@ -1174,11 +1174,11 @@
  leader_trait_defence_engineer_desc_2:0 "$leader_trait_defence_engineer_desc$"
  leader_trait_shadow_broker:0 "ติดต่อในเงามืด"
  leader_trait_shadow_broker_desc:1 "This leader keeps a network of clandestine operatives at their disposal."
- leader_trait_educator:0 "Perceptive Mentor"
+ leader_trait_educator:0 "ที่ปรึกษาที่ชาญฉลาด"
  leader_trait_educator_desc:1 "Knowledge and experience are the foundation of every great society. This leader possesses these values and does everything to promote and encourage them in others."
- leader_trait_master_bureaucrat:0 "Master Bureaucrat"
+ leader_trait_master_bureaucrat:0 "อาจารย์ของข้าราชการ"
  leader_trait_master_bureaucrat_desc:1 "Having toiled as a bureaucrat, this leader is a master of paperwork. With everything correctly filed, more time can be devoted to their subordinates."
- leader_trait_shroud_preacher:0 "Shroud Preacher"
+ leader_trait_shroud_preacher:0 "นักเทศน์แห่งพลังจิตบริสุทธิ์"
  leader_trait_shroud_preacher_effect:1 "$t$ทุกๆ §Y10 ปี§! จะมี 1 £pop£ ประชากร ที่มีคุณลักษณะ §Y$trait_latent_psionic$§!"
  leader_trait_shroud_preacher_desc:1 "The Shroud encompasses every living being. Connected to the powers within, this leader fosters true devotion in their followers."
  leader_trait_master_diplomat:0 "Master Diplomat"
@@ -1197,9 +1197,9 @@
  leader_trait_expert_survivalist_desc:1 "Some individuals are highly skilled in the art of survival. This leader knows how to cling to life even in the harshest, most inhospitable conditions, allowing new settlements to thrive."
  leader_trait_utopian_idealist:0 "Utopian Idealist"
  leader_trait_utopian_idealist_desc:1 "Many dream of building a truly utopian society. This leader works to turn those dreams into a reality."
- leader_trait_mediator:0 "Xeno-Mediator"
+ leader_trait_mediator:0 "ผู้เป็นสื่อกลางต่างดาว"
  leader_trait_mediator_desc:1 "A skilled mediator is essential in highly diverse population centers. This leader knows how to defuse tension and efficiently manage a multi-species planet."
- leader_trait_mediator_effect:1 "$PLANET_EFFECTS_TXT$:\n$t$Increase £amenities£$PLANET_AMENITIES_TITLE$ output by §G2%§! per Species on the Planet\n$t$Increase §Y$MOD_POP_HAPPINESS$§! by §G2%§! per Species on the Planet\n\n$SECTOR_EFFECTS_TXT$:\n$t$Increase £amenities£$PLANET_AMENITIES_TITLE$ output by §G1%§! per Species on each Planet\n$t$Increase §Y$MOD_POP_HAPPINESS$§! by §G1%§! per Species on each Planet"
+ leader_trait_mediator_effect:1 "$PLANET_EFFECTS_TXT$:\n$t$เพิ่มผลผลิต £amenities£$PLANET_AMENITIES_TITLE$ §G2%§! ในแต่ละเผ่าพันธุ์บนดาวดวงนี้\n$t$เพิ่ม §Y$MOD_POP_HAPPINESS$§! §G2%§! ในแต่ละเผ่าพันธุ์บนดาวดวงนี้\n\n$SECTOR_EFFECTS_TXT$:\n$t$เพิ่มผลผลิต £amenities£$PLANET_AMENITIES_TITLE$ §G1%§! ของเผ่าพันธุ์ต่างๆในแต่ละดาว\n$t$เพิ่ม §Y$MOD_POP_HAPPINESS$§! §G1%§! ของเผ่าพันธุ์ต่างๆในแต่ละดาว"
  leader_trait_efficient:0 "ผู้อุปถัมภ์ชนชั้นสูง"
  leader_trait_efficient_desc:1 "Born into the higher echelons of society, this leader has a strong sense of their own worth, and tends to favor peers of the upper classes."
  leader_trait_galvanizer:0 "Galvanizer"
@@ -1249,7 +1249,7 @@
  leader_trait_destiny_engineer_desc:0 "In space warfare, any mistake can turn deadly. This leader insists on strict maintenance routines to keep the fleet in excellent condition."
  leader_trait_guerilla_tactics:0 "Guerilla Tactician"
  leader_trait_guerilla_tactics_desc:1 "Large fleets are not always the best tool for the job. This admiral is adept at commanding small units to outmaneuver slower or more numerous opponents."
- leader_trait_survivalist:0 "Shield of the Empire"
+ leader_trait_survivalist:0 "โล่แห่งจักรวรรดิ"
  leader_trait_survivalist_desc:1 "The embodiment of a protector, this admiral is a true mainstay on the front lines, obstructing any foes who dare to enter our territory."
  leader_trait_maven_of_war:0 "Architect of War"
  leader_trait_maven_of_war_desc:1 "Holding this title is a great honor. Such an admiral not only possesses vast knowledge of war, but is also a crucial link to colleagues in the science department."
