--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -215,9 +215,9 @@
  leader_trait_gunship_specialization_hive_desc:0 "$leader_trait_gunship_focus_hive_desc$"
  leader_trait_gunship_focus_machine_desc:0 "This unit specializes in gunships."
  leader_trait_gunship_specialization_machine_desc:0 "$leader_trait_gunship_focus_machine_desc$"
- leader_trait_juryrigger_hive:1 "Jury-Rigger"
+ leader_trait_juryrigger_hive:1 "ซ่อมด้วยวัสดุใดๆก็ตามที่มี"
  leader_trait_juryrigger_hive_desc:0 "This drone uses the wreckage of defeated enemies to repair the ships in the fleet."
- leader_trait_juryrigger_machine:1 "Jury-Rigger"
+ leader_trait_juryrigger_machine:1 "ซ่อมด้วยวัสดุใดๆก็ตามที่มี"
  leader_trait_juryrigger_machine_desc:0 "This unit uses the wreckage of defeated enemies to repair the ships in the fleet."
  leader_trait_juryrigger_2_hive:0 "$leader_trait_juryrigger_hive$ II"
  leader_trait_juryrigger_2_hive_desc:0 "$leader_trait_juryrigger_hive_desc$"
