--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -21,7 +21,7 @@
  paragon.3.desc:0 "We have pinpointed the source of the energy fluctuations on [From.GetName] to a monolithic structure in the heart of the pre-sapient territory. The local population have been observed curiously congregating around the structure.\n\nIf we are to ascertain the purpose of this object, interaction with the planet's inhabitants is inevitable."
  paragon.3.a:0 "Send down a team to begin investigations."
  paragon.3.b:0 "$distar.255.b$"
- paragon.4.name:0 "The Murmuring Monolith"
+ paragon.4.name:0 "Murmuring Monolith"
  paragon.4.desc:0 "Our team has begun investigating the structure on [From.From.GetName]. It is an ancient four-sided pyramid. Scientists report hearing strange whispers in its vicinity and have aptly named it the 'Murmuring Monolith'.\n\nThe Monolith appears to play an integral part in a rudimentary belief system observed by the planet's pre-sapient species. It is unusual to witness a species at this level of sentience developing complex spiritual practices when they have yet to begin using tools.\n\nThe [beholder_presapients.GetAdj] are territorial and easily provoked. Our arrival has disturbed them, and more have begun gathering around the Monolith. Gaining access to the structure will require force."
  paragon.4.a:0 "We must earn their trust."
  paragon.4.b:0 "Their faith is misplaced."
@@ -63,7 +63,7 @@
  paragon.30.b:0 "It will have energy, over time."
  paragon.30.c:0 "We have no reason to trust it."
  the_beholder_energy_small:0 "The Beholder"
- beholder_context_menu_title:0 "Planetfall"
+ beholder_context_menu_title:0 "ลงไปที่ดาว"
  beholder_action_activity_key:0 "Moving to land on $PLANET_NAME|Y$"
  the_beholder_energy_small_desc:0 "This offering of energy will ensure our covenant with the Beholder."
  the_beholder_energy_medium:0 "$the_beholder_energy_small$"
@@ -78,44 +78,44 @@
  paragon.1.b.response:0 "§HA string of incoherent, whispering voices echoes forth.§!\n\nSecrets... laid bare. By the potential of... the path... unlocked. The Shroud ... begins. We offer welcome... Let us... your eyes... guide... there.\n\n§HAlthough the patchy message is open to interpretation, there is little doubt that psionic energy and the Shroud are involved.§!"
  paragon.1.c:0 "What are you?"
  paragon.1.c.response:0 "§HWith surprising clarity, a single voice swells:§!\n\nFleeting, and eternal. Nothing, and everything... Your language is ineffective. We are akin to 'purpose.' For now, any further definition lies beyond your grasp. The Shroud is vast and there is much to learn."
- paragon_beholder_joins:1 "§Y$NAME_The_Beholder$§! joins your Empire as a §HLeader§!"
+ paragon_beholder_joins:1 "§Y$NAME_The_Beholder$§! เข้าร่วมจักรวรรดิของคุณในฐานะ §Hผู้นำ§!"
  NAME_The_Beholder:0 "The Beholder"
  NAME_The_Beholder_plural:0 "The Beholder"
  temple_of_whispers:0 "$NAME_The_Beholder$"
  temple_of_whispers_plural:0 "$NAME_The_Beholder$"
  temple_of_whispers_key:0 ""
- BEHOLDER_CLOUD_LIGHTNING:0 "Shroud-Borne Lightning"
+ BEHOLDER_CLOUD_LIGHTNING:0 "สายฟ้า Shroud-Borne"
  NAME_Temple_of_Whispers:0 "Murmuring Monolith"
  building_the_beholder:0 "$NAME_Temple_of_Whispers$"
  building_the_beholder_desc:1 "§Y$temple_of_whispers$§!'s conduit into our plane of existence. A ship, feeding upon the planet's energy to amass Zro and sustain its connection to the Shroud."
  building_the_beholder_known_desc:2 "$beholder_decisions$"
  building_the_beholder_unknown_desc:0 "A mysterious structure, emitting strange energy fluctuations."
- beholder_ship_button_desc:0 "§HPlanetfall§!\nLand this ship on an owned planet, where it will become a building.\n\n§YMurmuring Monolith§!\nEmpire Limit: §Y1/1§!\nProduces: £sr_zro£ 8.00\nUpkeep: £energy£25.00\nResources from Psionic Pops: §G+10%§!\n\n$beholder_decisions$"
- beholder_decisions:1 "Allows §EPlanetary Decisions§!:\n- §H$decision_deploy_beholder$§!\n- §H$decision_psi_inoculate_pops$§!\n- §H$decision_cease_psi_inoculate_pops$§!\n\n"
- SHROUD_SHIELD_SUPPRESSION_FIELD:0 "Shroud-Borne Shield Suppression"
+ beholder_ship_button_desc:0 "§Hลงไปที่ดาว§!\nจอดยานลำนี้บนดาวเคราะห์ที่เราเป็นเจ้าของ ซึ่งยานจะกลายเป็นสิ่งปลูกสร้างที่ผิวดาว\n\n§YMurmuring Monolith (เสาหินพลังจิต)§!\nจำกัดจำนวนต่อจักรวรรดิ: §Y1/1§!\nผลิต: £sr_zro£ 8.00\nค่าบำรุงรักษา: £energy£25.00\nทรัพยากรจากประชากรที่มีพลังจิต: §G+10%§!\n\n$beholder_decisions$"
+ beholder_decisions:1 "อนุญาตให้มี §Eการตัดสินใจของดาวเคราะห์§!:\n- §H$decision_deploy_beholder$§!\n- §H$decision_psi_inoculate_pops$§!\n- §H$decision_cease_psi_inoculate_pops$§!\n\n"
+ SHROUD_SHIELD_SUPPRESSION_FIELD:0 "ระงับยับยั้งโล่พลังงาน Shroud-Borne"
  SHROUD_SHIELD_SUPPRESSION_FIELD_DESC:0 "A field of Shroud-infused energy which nullifies all shields within an entire star system."
- SHIP_PLANETFALL:0 "Bifunctional Design"
+ SHIP_PLANETFALL:0 "การออกแบบสองฟังก์ชัน"
  SHIP_PLANETFALL_DESC:0 "The Monolith is a sturdier vessel than most, and is capable of serving as both a ship and planetary building."
- decision_deploy_beholder:0 "Deploy Murmuring Monolith"
- decision_deploy_beholder_custom_tooltip:1 "The Murmuring Monolith will be deployed to function as an interstellar vessel capable of combat."
+ decision_deploy_beholder:0 "เสาหินพลังจิตขึ้นสู่อวกาศ"
+ decision_deploy_beholder_custom_tooltip:1 "Murmuring Monolith (เสาหินพลังจิต) จะถูกนำไปใช้เพื่อทำหน้าที่เป็นยานระหว่างดวงดาวและสามารถทำการรบได้"
  decision_deploy_beholder_desc:0 "Off-planet, the Beholder's vessel activates a potent shield dampener, which will disable all shields indiscriminately."
- cannot_deploy_during_psi_inoculation:1 "§RThe Psi-Inoculation of this planet's population is underway. The Beholder cannot be deployed, or their minds will be at risk.§!"
- decision_psi_inoculate_pops:1 "Begin Psi-Inoculation"
- decision_psi_inoculate_pops_custom_tooltip:2 "The Murmuring Monolith will grant £pop£ §YPops§! the §YPsionic§! Trait over time instead of producing £sr_zro£ §YZro§!.\n\n§RThe Murmuring Monolith cannot be deployed while this is ongoing.§!"
+ cannot_deploy_during_psi_inoculation:1 "§Rการปลูกฝังพลังจิตของประชากรดาวนี้กำลังดำเนินการอยู่ Beholder ไม่สามารถขึ้นสู่อวกาศหรือไม่เช่นนั้นจิตของพวกเขาจะตกอยู่ในความเสี่ยง§!"
+ decision_psi_inoculate_pops:1 "เริ่มการปลูกฝังพลังจิต"
+ decision_psi_inoculate_pops_custom_tooltip:2 "ใช้ £sr_zro£ §Yแร่ซีโร§! กับ Murmuring Monolith (เสาหินพลังจิต) เพื่อทำให้ £pop£ §Yประชากร§! ได้รับคุณลักษณะ §Yพลังจิต§! เมื่อเวลาผ่านไประยะหนึ่ง\n\n§Rเสาหินพลังจิตไม่สามารถขึ้นสู่อวกาศได้ในขณะที่ดำเนินการนี้อยู่§!"
  decision_psi_inoculate_pops_desc:3 "The Beholder inoculates Pops over time to become §Y$trait_psionic$§!. This requires that the pops are not being purged, Cybernetic or Hive-Minded."
  no_organic_pops_on_planet:0 "§RThis planet has no organic, non-cybernetic Pops to inoculate.§!"
- decision_cease_psi_inoculate_pops:0 "Cease Psi-Inoculation"
- decision_cease_psi_inoculate_pops_custom_tooltip:0 "£pop£ §YPops§! will cease being modified to gain the §YPsionic§! Trait over time.\n$beholder_psi_pops_timer_tooltip$\nThis will allow the Murmuring Monolith to be deployed and restore its £zro£ §YZro§! production."
+ decision_cease_psi_inoculate_pops:0 "หยุดการปลูกฝังพลังจิต"
+ decision_cease_psi_inoculate_pops_custom_tooltip:0 "ยุติการปรับเปลี่ยน £pop£ §Yประชากร§! ให้มีคุณลักษณะ §Yพลังจิต§!\n$beholder_psi_pops_timer_tooltip$\nสิ่งนี้จะทำให้ Murmuring Monolith (เสาหินพลังจิต) ถูกใช้งานและคืนการผลิต £zro£ §Yแร่ซีโร§!"
  decision_cease_psi_inoculate_pops_desc:0 "The Beholder inoculates Pops over time to become §YPsionic§!. This requires that the pops are not being purged, Cybernetic or Hive-Minded."
- beholder_psi_pops_timer_tooltip:0 "The next Psi-Inoculation on §Y[This.GetName]§! will complete on §Y[This.beholder_psi_pops_timer]§!."
- beholder_psi_pops_cooldown_tooltip:0 "\n§RThe Murmuring Monolith has recently ceased Psi-Inoculation and cannot begin again until §Y[This.beholder_psi_pops_cooldown_timer]§!§!"
+ beholder_psi_pops_timer_tooltip:0 "การปลูกฝังพลังจิตครั้งถัดไปที่ §Y[This.GetName]§! จะเสร็จในวันที่ §Y[This.beholder_psi_pops_timer]§!"
+ beholder_psi_pops_cooldown_tooltip:0 "\n§RMurmuring Monolith เพิ่งหยุดการฝังพลังจิตและไม่สามารถเริ่มใหม่ได้จนกว่าจะถึง §Y[This.beholder_psi_pops_cooldown_timer]§!§!"
  MESSAGE_POPS_INOCULATED_TITLE:0 "Pop Inoculation Complete"
- MESSAGE_POPS_INOCULATED_DESC:1 "A £pop£ Pop on $PLANET|$ has gained the §Y$trait_psionic$§! Trait due to the §YBeholder§!'s Psi-Inoculation."
- MESSAGE_BEHOLDER_PLANETFALL_TITLE:0 "Beholder Planetfall"
- MESSAGE_BEHOLDER_PLANETFALL_DESC:0 "The Beholder has landed on $PLANET|$. The Murmuring Monolith now rests there."
- MESSAGE_BEHOLDER_PLANETFALL_NO_SLOTS_TITLE:0 "Beholder Planetfall Failed"
- MESSAGE_BEHOLDER_PLANETFALL_NO_SLOTS_DESC:1 "The Beholder could not land on $PLANET|$. An empty Building Slot is required."
- leader_trait_governor_psionic_communion:0 "Psionic Communion"
+ MESSAGE_POPS_INOCULATED_DESC:1 "£pop£ ประชากร บนดาว $PLANET|$ ได้รับคุณลักษณะ §Y$trait_psionic$§! เนื่องจากการปลูกฝังพลังจิตของ §YBeholder§!"
+ MESSAGE_BEHOLDER_PLANETFALL_TITLE:0 "Beholder ลงไปที่ดาว"
+ MESSAGE_BEHOLDER_PLANETFALL_DESC:0 "Beholder ได้ลงจอดบนดาว $PLANET|$ แล้ว ตอนนี้เสาหินพลังจิต Murmuring Monolith อยู่ที่นั่น"
+ MESSAGE_BEHOLDER_PLANETFALL_NO_SLOTS_TITLE:0 "Beholder ลงไปที่ดาวไม่สำเร็จ"
+ MESSAGE_BEHOLDER_PLANETFALL_NO_SLOTS_DESC:1 "Beholder ไม่สามารถลงจอดบนดาว $PLANET|$ ได้ จำเป็นต้องมีช่องสิ่งปลูกสร้างว่าง 1 ช่อง"
+ leader_trait_governor_psionic_communion:0 "การเข้าร่วมศาสนาพลังจิต"
  leader_trait_governor_psionic_communion_desc:1 "This leader's psionic abilities improve the populace's mental wellbeing, building trust and providing a sense of safety."
  beholder_backstory:1 "A Shroud entity, part of the chorus of the Whisperers, projecting its presence via a conduit between planes of existence. Although it appears benevolent, caution is justified. The full extent of its power, and its true intentions, are unknown."
  NAME_Exakeides:0 "Keides, Scion of Vagros"
