--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -1058,8 +1058,8 @@
  HAS_CLOAKING_STRENGTH_VALUE_TRIGGER:0 "Cloaking Strength value is $COMPARE$ $VALUE|Y$"
  HAS_NOT_CLOAKING_DETECTION_VALUE_TRIGGER:0 "Cloaking Detection value is NOT $COMPARE$ $VALUE|Y$"
  HAS_CLOAKING_DETECTION_VALUE_TRIGGER:0 "Cloaking Detection value is $COMPARE$ $VALUE|Y$"
- SET_ASTEROID_BELT_EFFECT:0 "Asteroid belt set in $SYSTEM$ at the distance of $DISTANCE|0$"
- REMOVED_ASTEROID_BELT_EFFECT:0 "Removed asteroid belt in $SYSTEM$"
+ SET_ASTEROID_BELT_EFFECT:0 "แถบดาวเคราะห์น้อยในระบบดาว $SYSTEM$ ที่ระยะห่าง $DISTANCE|0$"
+ REMOVED_ASTEROID_BELT_EFFECT:0 "ลบแถบดาวเคราะห์น้อยในระบบดาว $SYSTEM$"
  REMOVE_PLANET:0 "Removed planet $PLANET$"
  REMOVE_ARMY_EFFECT:0 "ลบกองทัพ\n"
  REMOVE_ARMIES_EFFECT:0 "ลบกองทัพทั้งหมด"
